--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jee_pfa?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=true&useUnicode=yes&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=9090
